add dialog window

--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
@@ -21,3 +21,12 @@ TourDetails_Logs = Logs:
 TourDetails_Title = Titel:
 
 TourOverview_Tours = Tours
+
+AddTour_Name = Name
+AddTour_Description = Beschreibung
+AddTour_From = Von 
+AddTour_To = Nach
+AddTour_Distance = Distanz
+AddTour_EstTime = Geschätzte Zeit
+AddTour_TransportType = Transportmittel
+AddTour_RouteInfo = Route Informationen
