--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
@@ -21,3 +21,12 @@ TourDetails_Logs = Logs:
 TourDetails_Title = Title:
 
 TourOverview_Tours = Tours
+
+AddTour_Name = Name
+AddTour_Description = Description
+AddTour_From = From 
+AddTour_To = To
+AddTour_Distance = Distance
+AddTour_EstTime = Estimated Time
+AddTour_TransportType = Transport Type
+AddTour_RouteInfo = Route Information
