--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
@@ -1,3 +1,5 @@
+##############################################################################
+# Menu
 Menu_File=_File
 Menu_File_Import=_Import...
 Menu_File_Export=_Export...
@@ -9,8 +11,12 @@ Menu_Options_Settings=_Settings
 Menu_Help=_Help
 Menu_Help_About=_About
 
+##############################################################################
+# Search Bar
 SearchBar_Search=Search
 
+##############################################################################
+# Tour Details
 TourDetails_Route=_Route
 TourDetails_Description=_Description
 TourDetails_Date = Date
@@ -20,8 +26,12 @@ TourDetails_ppp = ...
 TourDetails_Logs = Logs:
 TourDetails_Title = Title:
 
+##############################################################################
+# Tour Overview
 TourOverview_Tours = Tours
 
+##############################################################################
+# Add Tour Dialog
 AddTour_Name = Name
 AddTour_Description = Description
 AddTour_From = From 
@@ -30,3 +40,8 @@ AddTour_Distance = Distance
 AddTour_EstTime = Estimated Time
 AddTour_TransportType = Transport Type
 AddTour_RouteInfo = Route Information
+
+##############################################################################
+# Dialog
+Dialog_OK = OK
+Dialog_Cancel = Cancel
