--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
@@ -1,3 +1,5 @@
+##############################################################################
+# Menu
 Menu_File=_Datei
 Menu_File_Import=_Import...
 Menu_File_Export=_Export...
@@ -9,8 +11,12 @@ Menu_Options_Settings=_Einstellungen
 Menu_Help=_Hilfe
 Menu_Help_About=_Über
 
+##############################################################################
+# Search Bar
 SearchBar_Search=Lupe
 
+##############################################################################
+# Tour Details
 TourDetails_Route=_Route
 TourDetails_Description=_Beschreibung
 TourDetails_Date = Datum
@@ -20,8 +26,12 @@ TourDetails_ppp = ...
 TourDetails_Logs = Logs:
 TourDetails_Title = Titel:
 
+##############################################################################
+# Tour Overview
 TourOverview_Tours = Tours
 
+##############################################################################
+# Add Tour Dialog
 AddTour_Name = Name
 AddTour_Description = Beschreibung
 AddTour_From = Von 
@@ -30,3 +40,8 @@ AddTour_Distance = Distanz
 AddTour_EstTime = Geschätzte Zeit
 AddTour_TransportType = Transportmittel
 AddTour_RouteInfo = Route Informationen
+
+##############################################################################
+# Dialog
+Dialog_OK = OK
+Dialog_Cancel = Abbrechen
