implement test and httpservice

--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
@@ -40,6 +40,9 @@ AddTour_Distance = Distanz
 AddTour_EstTime = Geschätzte Zeit
 AddTour_TransportType = Transportmittel
 AddTour_RouteInfo = Route Informationen
+AddTour_EstTimeHours = Stunden
+AddTour_EstTimeMins = Minuten
+AddTour_EstTimeSecs = Sekunden
 
 ##############################################################################
 # Dialog
