--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_it.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_it.properties
@@ -40,6 +40,9 @@ AddTour_Distance = Distanz
 AddTour_EstTime = Geschätzte Zeit
 AddTour_TransportType = Transportmittel
 AddTour_RouteInfo = Route Informationen
+AddTour_EstTimeHours = PROSPERO
+AddTour_EstTimeMins = PIZZA
+AddTour_EstTimeSecs = PASTA
 
 ##############################################################################
 # Dialog
