--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
@@ -40,7 +40,9 @@ AddTour_Distance = Distance
 AddTour_EstTime = Estimated Time
 AddTour_TransportType = Transport Type
 AddTour_RouteInfo = Route Information
-
+AddTour_EstTimeHours = Hours
+AddTour_EstTimeMins = Minutes
+AddTour_EstTimeSecs = Seconds
 ##############################################################################
 # Dialog
 Dialog_OK = OK
