--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
@@ -48,3 +48,9 @@ AddTour_EstTimeSecs = Sekunden
 # Dialog
 Dialog_OK = OK
 Dialog_Cancel = Abbrechen
+
+NoSelected_Msg = Es ist keine Tour ausgewählt!
+
+BadTour_NotValid = Die Tour ist nicht gültig
+
+Msg_Wait = Bitte warten...
