--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
@@ -47,3 +47,9 @@ AddTour_EstTimeSecs = Seconds
 # Dialog
 Dialog_OK = OK
 Dialog_Cancel = Cancel
+
+NoSelected_Msg = No tour selected!
+
+BadTour_NotValid = The tour is not valid
+
+Msg_Wait = Please wait...
