--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
@@ -17,14 +17,23 @@ SearchBar_Search=Lupe
 
 ##############################################################################
 # Tour Details
-TourDetails_Route=_Route
-TourDetails_Description=_Beschreibung
+TourDetails_Route= Route
+TourDetails_Description= Beschreibung
 TourDetails_Date = Datum
 TourDetails_Duration = Dauer
 TourDetails_Distance = Distanz
 TourDetails_ppp = ...
 TourDetails_Logs = Logs:
 TourDetails_Title = Titel:
+TourDetails_Description_EstTime = Geschätzte Zeit [HH:MM:SS]
+TourDetails_Description_To = Ziel
+TourDetails_Description_From = Start
+TourDetails_Description_Description = Beschreibung
+TourDetails_Description_Distance = Distanz [km]
+TourDetails_Description_RouteInfo = Route Informationen
+TourDetails_Description_TransportType = Transportmittel
+
+
 
 ##############################################################################
 # Tour Overview
@@ -54,3 +63,7 @@ NoSelected_Msg = Es ist keine Tour ausgewählt!
 BadTour_NotValid = Die Tour ist nicht gültig
 
 Msg_Wait = Bitte warten...
+
+Error_GetTour = Fehler beim Laden der Tour 
+
+
