--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
@@ -17,14 +17,21 @@ SearchBar_Search=Search
 
 ##############################################################################
 # Tour Details
-TourDetails_Route=_Route
-TourDetails_Description=_Description
+TourDetails_Route= Route
+TourDetails_Description= Description
 TourDetails_Date = Date
 TourDetails_Duration = Duration
 TourDetails_Distance = Distance
 TourDetails_ppp = ...
 TourDetails_Logs = Logs:
 TourDetails_Title = Title:
+TourDetails_Description_To = Ziel
+TourDetails_Description_From = Start
+TourDetails_Description_EstTime = Estimated Time [HH:MM:SS]
+TourDetails_Description_Description = Description
+TourDetails_Description_Distance = Distance [km]
+TourDetails_Description_RouteInfo = Route Information
+TourDetails_Description_TransportType = Transport Type
 
 ##############################################################################
 # Tour Overview
@@ -53,3 +60,5 @@ NoSelected_Msg = No tour selected!
 BadTour_NotValid = The tour is not valid
 
 Msg_Wait = Please wait...
+
+Error_GetTour = Error while loading the tour 
