--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_it.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_it.properties
@@ -17,14 +17,21 @@ SearchBar_Search=Lupe
 
 ##############################################################################
 # Tour Details
-TourDetails_Route=_Route
-TourDetails_Description=_Beschreibung
+TourDetails_Route= Le Route
+TourDetails_Description= Beschreibung
 TourDetails_Date = Datum
 TourDetails_Duration = Dauer
 TourDetails_Distance = Distanz
 TourDetails_ppp = ...
 TourDetails_Logs = Logs:
 TourDetails_Title = Titel:
+TourDetails_Description_To = Ziel
+TourDetails_Description_From = Start
+TourDetails_Description_EstTime = Estimated Time
+TourDetails_Description_Description = Description
+TourDetails_Description_Distance = Distance
+TourDetails_Description_RouteInfo = Route Information
+TourDetails_Description_TransportType = Transport Type
 
 ##############################################################################
 # Tour Overview
