--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
@@ -23,6 +23,11 @@ TourDetails_Date = Datum
 TourDetails_Duration = Dauer
 TourDetails_Distance = Distanz
 TourDetails_ppp = ...
+TourDetails_DateTime = Datum/Uhrzeit [DD.MM.YYYY HH:MM:SS]
+TourDetails_Comment = Kommentar
+TourDetails_Difficulty = Schwierigkeit [1-5]
+TourDetails_TotalTime = Gesamtzeit
+TourDetails_Rating = Bewertung [1-5]
 TourDetails_Logs = Logs:
 TourDetails_Title = Titel:
 TourDetails_Description_EstTime = Geschätzte Zeit [HH:MM:SS]
@@ -53,6 +58,14 @@ AddTour_EstTimeHours = Stunden
 AddTour_EstTimeMins = Minuten
 AddTour_EstTimeSecs = Sekunden
 
+
+#############################################################################-
+# Add Tour Logs
+AddTourLog_TotalTimeHours = Stunden
+AddTourLog_TotalTimeMins = Minuten
+AddTourLog_TotalTimeSecs = Sekunden
+
+
 ##############################################################################
 # Dialog
 Dialog_OK = OK
@@ -61,6 +74,7 @@ Dialog_Cancel = Abbrechen
 NoSelected_Msg = Es ist keine Tour ausgewählt!
 
 BadTour_NotValid = Die Tour ist nicht gültig
+BadTourLog_NotValid = Der TourLog ist nicht gültig
 
 Msg_Wait = Bitte warten...
 
