--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
@@ -23,6 +23,11 @@ TourDetails_Date = Date
 TourDetails_Duration = Duration
 TourDetails_Distance = Distance
 TourDetails_ppp = ...
+TourDetails_DateTime = Date/Time [DD.MM.YYYY HH:MM:SS]
+TourDetails_Comment = Comment
+TourDetails_Difficulty = Difficulty [1-5]
+TourDetails_TotalTime = Total time
+TourDetails_Rating = Rating [1-5]
 TourDetails_Logs = Logs:
 TourDetails_Title = Title:
 TourDetails_Description_To = Ziel
@@ -37,6 +42,7 @@ TourDetails_Description_TransportType = Transport Type
 # Tour Overview
 TourOverview_Tours = Tours
 
+
 ##############################################################################
 # Add Tour Dialog
 AddTour_Name = Name
@@ -50,6 +56,14 @@ AddTour_RouteInfo = Route Information
 AddTour_EstTimeHours = Hours
 AddTour_EstTimeMins = Minutes
 AddTour_EstTimeSecs = Seconds
+
+
+#############################################################################-
+# Add Tour Logs
+AddTourLog_TotalTimeHours = Stunden
+AddTourLog_TotalTimeMins = Minuten
+AddTourLog_TotalTimeSecs = Sekunden
+
 ##############################################################################
 # Dialog
 Dialog_OK = OK
@@ -58,6 +72,7 @@ Dialog_Cancel = Cancel
 NoSelected_Msg = No tour selected!
 
 BadTour_NotValid = The tour is not valid
+BadTourLog_NotValid = The tour log is not valid
 
 Msg_Wait = Please wait...
 
