--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_it.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_it.properties
@@ -51,6 +51,8 @@ AddTour_EstTimeHours = PROSPERO
 AddTour_EstTimeMins = PIZZA
 AddTour_EstTimeSecs = PASTA
 
+BadTourLog_NotValid = Der TourLog ist nicht gültig
+
 ##############################################################################
 # Dialog
 Dialog_OK = OK
