start pdf report

--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
@@ -3,6 +3,9 @@
 Menu_File=_File
 Menu_File_Import=_Import...
 Menu_File_Export=_Export...
+Menu_File_Report = Report...
+Menu_File_Report_Single = Single...
+Menu_File_Report_All = All...
 Menu_File_Quit=_Quit
 Menu_Edit=_Edit
 Menu_Edit_Duplicate=_Duplicate
