--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
@@ -3,6 +3,9 @@
 Menu_File=_Datei
 Menu_File_Import=_Import...
 Menu_File_Export=_Export...
+Menu_File_Report = Bericht...
+Menu_File_Report_Single = Einzel...
+Menu_File_Report_All = Alle...
 Menu_File_Quit=_Beenden
 Menu_Edit=_Edit
 Menu_Edit_Duplicate=_Duplicate
