add report, import, export, text search

--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_de.properties
@@ -1,8 +1,8 @@
 ##############################################################################
 # Menu
 Menu_File=_Datei
-Menu_File_Import=_Import...
-Menu_File_Export=_Export...
+Menu_File_Import=_Importieren...
+Menu_File_Export=_Exportieren...
 Menu_File_Report = Bericht...
 Menu_File_Report_Single = Einzel...
 Menu_File_Report_All = Alle...
@@ -40,6 +40,8 @@ TourDetails_Description_Description = Beschreibung
 TourDetails_Description_Distance = Distanz [km]
 TourDetails_Description_RouteInfo = Route Informationen
 TourDetails_Description_TransportType = Transportmittel
+TourDetails_Description_Popularity = Beliebtheit
+TourDetails_Description_ChildFriendly = Kinderfreundlichkeit
 
 
 
@@ -82,5 +84,14 @@ BadTourLog_NotValid = Der TourLog ist nicht gültig
 Msg_Wait = Bitte warten...
 
 Error_GetTour = Fehler beim Laden der Tour 
+
+SomethingWrong = Etwas ist schief gelaufen :(
+
+CF_NA = N/A
+CF_VeryFriendly = Sehr freundlich
+CF_Friendly = Freundlich
+CF_Average = Durchschnittlich
+CF_NotFriendly = Nicht freundlich
+CF_Badass = Hardcore
 
 
