--- a/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
+++ b/PL/src/main/resources/org/easytours/tourplanner/view/gui_strings_en.properties
@@ -40,6 +40,8 @@ TourDetails_Description_Description = Description
 TourDetails_Description_Distance = Distance [km]
 TourDetails_Description_RouteInfo = Route Information
 TourDetails_Description_TransportType = Transport Type
+TourDetails_Description_Popularity = Popularity
+TourDetails_Description_ChildFriendly = Child Friendlieness
 
 ##############################################################################
 # Tour Overview
@@ -80,3 +82,12 @@ BadTourLog_NotValid = The tour log is not valid
 Msg_Wait = Please wait...
 
 Error_GetTour = Error while loading the tour 
+
+SomethingWrong = Something went wrong :(
+
+CF_NA = N/A
+CF_VeryFriendly = Very friendly
+CF_Friendly = Friendly
+CF_Average = Average
+CF_NotFriendly = Not friendly
+CF_Badass = Hardcore
